# ros-compat

./: CMakeLists.txt
include/console_bridge/: console.h
include/ros/: node_handle.h
python/rospkg/: __init__.py  rospack.py
